[package]
name = "wgpu_testing"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
cfg-if = "1.0.0"
env_logger = "0.11.8"
log = "0.4.27"
pollster = "0.4.0"
wasm-bindgen-futures = "0.4.30"
wgpu = "25.0.2"
winit = { version = "0.30", features = ["android-native-activity"] }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
strip = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "25.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

